# Bachelor

Algorithms/ADT_priority_queue/: ADT Priority Queue.sln
Algorithms/Graph4/: CMakeLists.txt  README.txt  main.cpp
Algorithms/Graph5/: CMakeLists.txt  README.txt  main.cpp
Algorithms/Graph7/: CMakeLists.txt  README.txt  main.cpp
C++/Asigments/: class Finance.cpp
C++/set_10/: CMakeLists.txt
C++/set_5/: CMakeLists.txt
C++/set_6/: CMakeLists.txt
C++/set_8/: CMakeLists.txt
C++/set_8/task_1/: main.cpp
C++/set_8/task_2/: functors.h  main.cpp
C++/set_8/task_3/: functors.h  main.cpp
C++/set_8/task_4/: functors.h  main.cpp
C++/set_8/task_5/: functors.h  main.cpp
C++/set_8/task_6/: functors.h  main.cpp
C++/set_8/task_7/: main.cpp  vector.h
C++/set_9/: CMakeLists.txt
Python/Assigment10/: Randomqueue.py  Stack.py
Python/Assigment3/: zestaw 3.py
Python/Assigment4/: zestaw 4.py
Python/Assigment5/: fracs.py  polys.py
Python/Assigment6/: points.py  rectangles.py  triangles.py
Python/Assigment7/: iterators.py  rectangles.py
Python/Assigment8/: rectangles.py  test_rectangles.py
Python/Assigment9/: SortedList.py
Python/Final_project/: Project - Minimum Spanning Tree + Vizualization.py  README
Website/: about_logged_in.html  connector.js  construction.html  contact.html  contact_logged_in.html  conversation.html  index.html  index_logged_in.html  interior_logged_in.html  interior_logged_in_admin.html  login.html  project.html  project_logged_in_admin.html  script.js  style.css  test.html
Website/Website-Backend-main/: about.html  (+9 more)
(+37 files in other folders)
