cmake_minimum_required(VERSION 3.22)
project(set_8)

set(CMAKE_CXX_STANDARD 23)

add_executable(set_8 task_1/main.cpp task_2/main.cpp task_3/main.cpp task_4/main.cpp task_5/main.cpp task_6/main.cpp task_7/main.cpp task_2/functors.h task_3/functors.h task_4/functors.h task_5/functors.h task_6/functors.h task_7/vector.h)
